Improve sidebar menu contrast to fix accessibility issues

--- a/styles/theme-base.css
+++ b/styles/theme-base.css
@@ -16,6 +16,7 @@
   --light-blue-color: #E2E4EF;
   --dark-magenta-color: #793862;
   --medium-magenta-color: #AE508D;
+  --light-magenta-color: #CF82B1;
 }
 
 .clearfix {
